v2-website/src/css/customTheme.css
:root{
  --ifm-color-primary-lightest: #0E1622;
  --ifm-color-primary-lighter: #0D141E;
  --ifm-color-primary-light: #0C131D;
  --ifm-color-primary: #0B111A;
  --ifm-color-primary-dark: #0A0F17;
  --ifm-color-primary-darker: #090E16;
  --ifm-color-primary-darkest: #080C12;
  --ifm-navbar-link-color: #FFFFFF;
  --ifm-navbar-link-hover-color:#ff5400;
  --primary-font:'Montserrat', sans-serif;
  --primary-color: #FF5400;
  --ifm-transition-fast: 200ms;
--ifm-menu-link-sublist-icon: url('data:image/svg+xml;utf8,<svg alt="Arrow" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgba(0,0,0,0.5)" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');

}

body, h1, h2, h3, h4, h5 {
  font-family: var(--primary-font) !important;
}

.docusaurus-mt-lg {
  display: none;
}


.primary-button {
  height: 30px;
  background: var(--primary-color);
  border-radius: 4px;
  display: block;
  font-weight: 600;
  color: #fff;
  letter-spacing: 1px;
  max-width: 100px;
  padding: 3px 12px;
  width: 40%;
  margin: 0 10px;
  text-align: center;
  border: none;
  cursor: pointer;
}

.primary-button:hover{
  text-decoration: none;
  color: white !important;
  background: var(--primary-color) !important;
}
.primary-button:focus{
  outline:0;
}

.navbar--fixed-top {
  padding: 0 50px;
}

/* your custom css */
.navbar--fixed-top {
  background-color: white;
  box-shadow: rgb(0 0 0 / 10%) 0px 5px 25px -5px, rgb(0 0 0 / 4%) 0px 10px 10px -5px;
}
.top-fold-background{
  height: auto;
  background-size: cover;
  background-repeat: no-repeat;
}
.flex-categories-container{
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  padding: 60px 80px;
}
#home-page{
  display: flex;
  height: 100%;
}
.card-home{
  background: #FFFFFF;
  border: 1px solid transparent;
  border-radius: 3px;
  box-shadow: 0 0 5px 0 rgba(0,0,0,.12);
  padding: 20px;
  width: 100%;
  margin-bottom: 20px;
  display: flex;
}
.card-home-img{
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 30%;
  height: 100%;
}
.card-home-img img{
  height: 50px;
  width: auto;
}
.card-home-content{
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-grow: 1;
}
.card-home-content-title{
  font-family: var(--primary-font);
  font-weight: 700;
  font-size: 18px;
  color: #000000;
  letter-spacing: 0;
}

.side-right-nav{
  border-radius: 5px;
  background-color: white;
}

.mainWrapper_z2l0 {
  height: 100%;
}

#__docusaurus {
height: 100%;
}

.side-right-nav-container-announcements{
  background-color: initial;
}

.menu_node_modules-\@docusaurus-theme-classic-lib-theme-DocSidebar-Desktop-Content-styles-module {
  background-color: #35373F;
}

.sidebar_njMd {
  background-color: #35373F;
}

.card-home-content-title, .card-home-content-link{
  text-align: start;
  padding: 5px 0;
}
.card-home-content-title:hover, .card-home-content-link:hover{
  color: var(--primary-color);
}

.DocSearch-HitsFooter {
display: none !important;
}

.badge {
  display: none !important;
}

.col .text--right {
  display: none;
}

.react-toggle {
  display: none;
  }

  .aa-DetachedSearchButton {
    height: 30px !important;
    border-radius: 50px !important;
    width: 200px !important;
  }

.card-categories{
  background-color: #FFFFFF;
  border-radius: 5px;
  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.05);
  width: 300px;
  padding:10px 10px;
  margin: 20px;
  cursor: pointer;
}
.card-categories:hover .section-card-title{
  color: var(--primary-color);
}

.side-right-nav-container {
  background-color: #35373F;
  color: white !important;
  height: 100%;
}

.side-right-nav-container-popular-title{
  font-family: var(--primary-font);
  font-size: 15px;
  color: white;
  font-weight: 600 !important;
  margin: 0;
  padding: 10px 0 10px;
}

.side-right-nav .side-right-nav-container-popular ,.side-right-nav-container-popular .side-right-nav-container-popular-item, .side-right-nav-container-announcements{
  text-align: center;
}

.side-right-nav-container-popular-title img{
  vertical-align: middle;
}

.side-right-nav-container-popular-item{
  font-family: var(--primary-font);
  font-size: 13px;
  font-weight: 400;
  color: white;
  text-align: start;
  display: block;
  padding: 10px 0;
}

.side-right-nav-container-popular-item:hover{
  color: var(--primary-color);
}

.side-right-nav-container-announcements{
  padding: 30px 40px 20px;
}

.side-right-nav-container-announcements-title{
  font-family: var(--primary-font);
  font-weight: 600 !important;
  font-size: 18px;
  color: #FFFFFF;
  padding: 10px 0 20px;
}

.side-right-nav-container-announcements-item{
  font-family: var(--primary-font);
  font-weight: 400;
  font-size: 18px;
  color: #FFFFFF;
  margin: 0;
  font-size: 16px;
  color: #E1E1E1;
  margin-top: 30px;
}

.side-right-nav-container-popular{
  padding: 30px 40px 30px;
}

.main-title {
  font-family: var(--primary-font);
  font-size: 34px;
  color: #FFFFFF;
  letter-spacing: 0;
  margin: 0;
  text-align: center;
}
.main-description{
  padding: 10px 0 10px;
  margin: 0;
  color: white;
  text-align: center;
  font-size: 17px;
  font-family: var(--primary-font);
  font-weight: 500;
  line-height: 1;
}
.section-card-title {
  font-family: 'Raleway', Arial, Helvetica, sans-serif;
  text-align: center;
  font-size: 20px;
  font-weight: 400;
  line-height: 30px;
  letter-spacing: 0;
  color: black;
  margin-bottom: 0;
  margin-top: 0px ;
  font-weight: 600;
}

.docMainWrapper{
  padding-left: 20px;
  padding-right: 20px;
}

.footer{
  background: #FFFFFF;
  padding-top: 10px;
  border-top: 1px solid var(--ifm-toc-border-color) !important;
  z-index: 20;
}
.footer p{
  text-align: center;
  font-weight: 300;
  line-height: 24px;
  letter-spacing: .76px;
  font-size: 14px;
  font-family: 'Raleway', Arial, Helvetica, sans-serif;
}
.full-row {
  width: 100%;
}
.flex{
  display: flex;
}

.toc .toggleNav ul li.navListItemActive a {
  color: var(--primary-color) !important;
}
/* ... */

